packages/aircalc_native/lib/src/bindings.dart

// 由 package:ffigen 从 src/aircalc.h 生成，请勿手工编辑。
// ignore_for_file: always_specify_types, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:aircalc_native/src/bindings.dart')
library;

import 'dart:ffi' as ffi;

/// 创建识别器。返回句柄；0 表示失败，具体原因写入 err（可传 NULL）。
///
/// model_dir   模型目录。各后端按自己的命名约定在其中找文件：
/// LiteRT      prefix_enc.tflite / decoder.tflite
/// ExecuTorch  prefix_enc.pte    / decoder.pte（多方法）
/// 退回 decoder_prefill_kv.pte + decoder_step_kv.pte
/// vocab_json  vocab.json 的完整内容
/// backend     见 AIRCALC_BACKEND_*
/// num_threads CPU 线程数；0 用后端默认。
/// Android 走 XNNPACK 时建议显式设 4，避开大小核调度拖累。
@ffi.Native<
  ffi.Uint64 Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Int32>,
  )
>()
external int ink_hmer_engine_create(
  ffi.Pointer<ffi.Char> model_dir,
  ffi.Pointer<ffi.Char> vocab_json,
  int backend,
  int num_threads,
  ffi.Pointer<ffi.Int32> err,
);

/// 销毁识别器。重复调用安全。
@ffi.Native<ffi.Void Function(ffi.Uint64)>()
external void ink_hmer_engine_destroy(int handle);

/// 返回后端名（静态字符串，勿释放）。句柄无效时返回 NULL。
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Uint64)>()
external ffi.Pointer<ffi.Char> ink_hmer_engine_backend_name(int handle);

/// 识别一组笔画。成功返回 AIRCALC_OK 并填充 out。
@ffi.Native<
  ffi.Int32 Function(
    ffi.Uint64,
    ffi.Pointer<InkHmerStroke>,
    ffi.Size,
    ffi.Pointer<InkHmerResult>,
  )
>()
external int ink_hmer_recognize(
  int handle,
  ffi.Pointer<InkHmerStroke> strokes,
  int stroke_count,
  ffi.Pointer<InkHmerResult> out,
);

/// 释放 ink_hmer_recognize 填充的结果。重复调用安全。
@ffi.Native<ffi.Void Function(ffi.Pointer<InkHmerResult>)>()
external void ink_hmer_result_free(ffi.Pointer<InkHmerResult> r);

/// 初始化手部检测。两个模型均为内存中的字节。成功返回 AIRCALC_OK。
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
  )
>()
external int hand_track_init(
  ffi.Pointer<ffi.Uint8> palm_data,
  int palm_len,
  ffi.Pointer<ffi.Uint8> landmark_data,
  int landmark_len,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external int hand_track_init_path(
  ffi.Pointer<ffi.Char> palm_path,
  ffi.Pointer<ffi.Char> landmark_path,
);

/// 预热：把手掌与关键点两个模型各跑一次，触发 Core ML 编译。
/// 应在 init 之后、进入取景之前调一次。
@ffi.Native<ffi.Void Function()>()
external void hand_track_warm_up();

/// 是否已初始化。
@ffi.Native<ffi.Int32 Function()>()
external int hand_track_ready();

/// 在一帧上检测手部。pixels 为 w*h*4 字节；format：0 = RGBA，1 = BGRA。
@ffi.Native<
  HandTrackHands Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Float,
    ffi.Int32,
  )
>()
external HandTrackHands hand_track_detect(
  ffi.Pointer<ffi.Uint8> pixels,
  int w,
  int h,
  int num_hands,
  double min_presence,
  int format,
);

/// 释放手部检测资源。重复调用安全。
@ffi.Native<ffi.Void Function()>()
external void hand_track_destroy();

/// 求值一个 LaTeX 数学表达式。
///
/// 成功返回结果字符串（UTF-8，NUL 结尾），*err 置 AIRCALC_CALC_OK；返回的指针
/// 必须交给 aircalc_string_free 释放。失败返回 NULL，*err 为上面的错误码之一。
/// err 可传 NULL。
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int32>)
>()
external ffi.Pointer<ffi.Char> aircalc_eval_latex(
  ffi.Pointer<ffi.Char> expr,
  ffi.Pointer<ffi.Int32> err,
);

/// 释放 aircalc_eval_latex 返回的字符串。传 NULL 安全。
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void aircalc_string_free(ffi.Pointer<ffi.Char> s);

/// 一个采样点。t 为秒。
final class InkHmerPoint extends ffi.Struct {
  @ffi.Double()
  external double x;

  @ffi.Double()
  external double y;

  @ffi.Double()
  external double t;
}

/// 一条笔画，指向连续的点数组。数组由调用方保有，调用期间须存活。
final class InkHmerStroke extends ffi.Struct {
  external ffi.Pointer<InkHmerPoint> points;

  @ffi.Size()
  external int count;
}

/// 识别结果。由 ink_hmer_recognize 填充，用完须调 ink_hmer_result_free。
final class InkHmerResult extends ffi.Struct {
  /// < UTF-8，null 结尾；失败时为 NULL
  external ffi.Pointer<ffi.Char> latex;

  external ffi.Pointer<ffi.Int32> token_ids;

  @ffi.Size()
  external int token_count;

  @ffi.Double()
  external double enc_ms;

  @ffi.Double()
  external double prefill_ms;

  @ffi.Double()
  external double decode_ms;

  @ffi.Double()
  external double total_ms;
}

final class HandTrackHand extends ffi.Struct {
  /// < "Left" / "Right"
  @ffi.Array.multi([6])
  external ffi.Array<ffi.Char> handedness;

  /// < 归一化图像坐标 [0,1]
  @ffi.Array.multi([63])
  external ffi.Array<ffi.Float> landmarks;

  /// < 世界坐标，单位米
  @ffi.Array.multi([63])
  external ffi.Array<ffi.Float> world_landmarks;

  @ffi.Float()
  external double presence;

  /// < 检出时为 21
  @ffi.Int32()
  external int landmark_count;
}

final class HandTrackHands extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<HandTrackHand> hands;

  @ffi.Int32()
  external int count;
}

const int AIRCALC_OK = 0;

const int AIRCALC_ERR_INVALID_HANDLE = -1;

const int AIRCALC_ERR_INVALID_ARG = -2;

const int AIRCALC_ERR_LOAD = -3;

const int AIRCALC_ERR_EXECUTE = -4;

const int AIRCALC_ERR_BACKEND_UNAVAILABLE = -5;

const int AIRCALC_BACKEND_AUTO = 0;

const int AIRCALC_BACKEND_LITERT = 1;

const int AIRCALC_BACKEND_COREML = 3;

const int HAND_TRACK_LANDMARKS = 63;

const int HAND_TRACK_MAX_HANDS = 2;

const int AIRCALC_CALC_OK = 0;

const int AIRCALC_CALC_EMPTY = -100;

const int AIRCALC_CALC_SYNTAX = -101;

const int AIRCALC_CALC_UNKNOWN_TOKEN = -102;

const int AIRCALC_CALC_UNSUPPORTED = -103;

const int AIRCALC_CALC_NOT_FINITE = -104;

const int AIRCALC_CALC_FACTORIAL = -105;

const int AIRCALC_CALC_TOO_DEEP = -106;
